--- a/01/ex03/Makefile
+++ b/01/ex03/Makefile
@@ -1,10 +1,11 @@
-NAME		= brain
+NAME		= violence
 
 CXX			= c++
 CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 RM			= rm -f
 
-SRCS		= main.cpp
+SRCS		= main.cpp, Weapon.hpp, Weapon.cpp, HumanA.hpp, HumanA.cpp, HumanB.hpp, HumanB.cpp
+
 OBJS		= $(SRCS:.cpp=.o)
 
 
