--- a/01/ex04/Makefile
+++ b/01/ex04/Makefile
@@ -1,10 +1,10 @@
-NAME		= violence
+NAME		= replace
 
 CXX			= c++
 CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 RM			= rm -f
 
-SRCS		= main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
+SRCS		= main.cpp replace.cpp
 
 OBJS		= $(SRCS:.cpp=.o)
 
